--- a/src/app/components/modals/modal.media.view.component.css
+++ b/src/app/components/modals/modal.media.view.component.css
@@ -1,3 +1,14 @@
+.carousel-control {
+  top: 63px;
+  justify-content: flex-end;
+  width: 7%;
+  z-index: 1100;
+}
+
+.cdk-overlay-container {
+  z-index: 2000;
+}
+
 span.tag {
   border: 1px solid gray;
   border-radius: 10px;
@@ -75,6 +86,14 @@ form.tag-form {
   cursor: pointer;
 }
 
+.badge-list:first-child {
+  margin-left: 0px;
+}
+
+.badge-list {
+  margin-left: 3px;
+}
+
 .vg-download {
   color: white;
   margin-left: 15px;
@@ -103,5 +122,5 @@ form.tag-form {
 
 .vg-control-text {
   line-height: 45px;
-  color:white;
+  color: white;
 }
