--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav #navb class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-  <div class="container-xl">
+  <div class="container-xl" style="padding-left: 0px;">
     <a class="navbar-brand" href="#">PrImBoard</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
