--- a/src/app/components/media/media.list.component.css
+++ b/src/app/components/media/media.list.component.css
@@ -1,3 +1,14 @@
+.square {
+  width: 100%;
+  padding-bottom: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.col-2 > img {
+  width: 100%;
+}
+
 .grid {
   /* Grid Fallback */
   display: flex;
@@ -48,12 +59,14 @@
 }
 
 .select-overlay {
-  width: 128px;
-  height: 128px;
+  width: 100%;
+  height: 100%;
   position:absolute;
   background-color: rgba(138, 138, 138, 0.65);
   z-index:100;
   cursor: pointer;
+  background-clip: content-box;
+  padding: 0 8px 8px 0;
 }
 
 .select-overlay > svg {
